# sms-aichat

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  dialogs.excalidraw  lambda_function.py  pyproject.toml
.github/workflows/: general-workflow.yaml  test-build.yaml
src/: lambda_function.py  schemas.py  sms_aichat.py
terraform/: .terraform.lock.hcl  ecr.tf  github_action.tf  lambda.tf  main.tf  terraform.tf  variables.tf  versions.tf
terraform/modules/init-backend/: main.tf
terraform/modules/init-backend/templates/: terraform.tf.tmpl  versions.tf.tmpl
tests/events/: testEvent1.json
tests/unit/src/: test_lambda_function.py
